[gd_scene load_steps=8 format=3 uid="uid://ck5q0pmiqxe15"]

[ext_resource type="PackedScene" uid="uid://4olofyowivs7" path="res://Escenas/Escena 4/jugador_2.tscn" id="1_cgnvm"]
[ext_resource type="Texture2D" uid="uid://d4nrjr7i78yhe" path="res://Assets/Fondos/bosque_oscuro.jpg" id="1_qodao"]
[ext_resource type="Script" path="res://Escenas/Escena 4/game(2).gd" id="1_u7o3c"]
[ext_resource type="PackedScene" uid="uid://cwb5pp0i3d30f" path="res://Escenas/Escena 4/spawner.tscn" id="3_akx2k"]
[ext_resource type="Texture2D" uid="uid://dhfekebvi2xuw" path="res://Assets/Objetos/pergamino.png" id="5_2scem"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rsw1"]
size = Vector2(23, 383)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsy3u"]
size = Vector2(660, 20)

[node name="game(2)" type="Node"]
script = ExtResource("1_u7o3c")

[node name="BosqueOscuro" type="Sprite2D" parent="."]
position = Vector2(319.5, 182)
scale = Vector2(1.42889, 1.21333)
texture = ExtResource("1_qodao")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_cgnvm")]
position = Vector2(322, 306)

[node name="Bordes" type="Node" parent="."]

[node name="Izquierda" type="StaticBody2D" parent="Bordes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Izquierda"]
position = Vector2(1.5, 181.5)
shape = SubResource("RectangleShape2D_8rsw1")

[node name="Derecha" type="StaticBody2D" parent="Bordes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Derecha"]
position = Vector2(629, 179)
shape = SubResource("RectangleShape2D_8rsw1")

[node name="Fondo" type="StaticBody2D" parent="Bordes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Fondo"]
position = Vector2(314, 352)
shape = SubResource("RectangleShape2D_vsy3u")

[node name="Items" type="Node" parent="."]

[node name="spawner" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(458, 32)

[node name="spawner2" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(562, 34)

[node name="spawner3" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(357, 20)

[node name="spawner4" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(256, 20)

[node name="spawner5" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(153, 41)

[node name="spawner6" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(32, 26)

[node name="spawner7" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(201, 86)

[node name="spawner8" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(508, 125)

[node name="spawner9" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(90, 158)

[node name="spawner10" parent="Items" instance=ExtResource("3_akx2k")]
position = Vector2(315, 84)

[node name="scoreLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Muerte" type="CanvasLayer" parent="."]
visible = false

[node name="Pergamino" type="Sprite2D" parent="Muerte"]
position = Vector2(316.5, 281.038)
scale = Vector2(0.451, 0.156439)
texture = ExtResource("5_2scem")

[node name="MesjMuerte" type="Label" parent="Muerte"]
modulate = Color(1, 0, 0, 1)
offset_left = 220.0
offset_top = 155.0
offset_right = 403.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 32
text = "GAME OVER"

[node name="HBoxContainer" type="HBoxContainer" parent="Muerte"]
offset_left = 277.0
offset_top = 176.0
offset_right = 361.0
offset_bottom = 235.0

[node name="Label" type="Label" parent="Muerte/HBoxContainer"]
layout_mode = 2
text = "Score: "

[node name="Label2" type="Label" parent="Muerte/HBoxContainer"]
layout_mode = 2

[node name="Texto" type="Label" parent="Muerte"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
offset_left = 138.0
offset_top = 254.0
offset_right = 433.0
offset_bottom = 334.0
theme_override_font_sizes/font_size = 12
text = "Tienes ahora la posibilidad de continuar o de tener 
una segunda oportunidad en este nivel, pero si 
decides tomarla, perder√°s los items obtenidos"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Muerte"]
anchors_preset = -1
anchor_left = 0.843
anchor_top = 0.941
anchor_right = 0.843
anchor_bottom = 0.941
offset_left = -93.52
offset_top = -84.76
offset_right = -26.52
offset_bottom = -18.76
grow_horizontal = 0
grow_vertical = 0

[node name="Repetir" type="Button" parent="Muerte/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Repetir"

[node name="Continuar" type="Button" parent="Muerte/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Continuar
"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="pressed" from="Muerte/VBoxContainer/Repetir" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Muerte/VBoxContainer/Repetir" to="." method="_on_repetir_pressed"]
[connection signal="pressed" from="Muerte/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
